--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,13 +1,35 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+    box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.menu {
+    width: 65vw;
+    height: 100vh;
+    background-color: white;
+    position: fixed;
+    top: 0;
+    left: -65vw;
+    z-index: 50;
+    opacity: 0;
+    padding: 2rem;
+    transition:  left .75s linear, opacity 1s linear;
+}
+
+.menu.hover {
+    opacity: 1;
+    left: 0;
+}
+
+nav .container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-top: 1em;
+}
+
+nav {
+    position: sticky;
+    top: 0;
+    left: 0;
+    transition: top 0.3s ease;
 }
