fixed authentication problem

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -56,3 +56,24 @@ footer i {
 footer .container {
     padding: 2rem;
 }
+
+ul.container {
+    min-height: 100vh;
+}
+
+.text {
+    white-space: pre-wrap;
+}
+
+img[alt="Profile"] {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.media embed {
+    width: 15rem;
+    height: 15rem;
+    object-fit: cover;
+}
