--- a/frontend/src/components/quoteTweet/quoteTweet.sass
+++ b/frontend/src/components/quoteTweet/quoteTweet.sass
@@ -1,1 +1,16 @@
 @use "../../styles"
+
+.quote_tweet
+    .profile_picture
+        display: flex
+        align-content: center
+
+        .card-title
+            margin: auto
+
+        img
+            width: 4.5rem
+            height: 4.5rem
+            padding: .5rem
+            object-fit: cover
+            border-radius: 50%
