--- a/frontend/src/styles/_index.sass
+++ b/frontend/src/styles/_index.sass
@@ -10,6 +10,8 @@
 body
     background-color: colors.$theme
     line-height: 1.5
+    font-family: sans-serif
+    font-size: 18px
 
 .createpostLink
     width: 3.5rem
