--- a/frontend/src/components/retweet/retweet.sass
+++ b/frontend/src/components/retweet/retweet.sass
@@ -1,1 +1,10 @@
 @use "../../styles"
+
+.retweetBox
+    background-color: styles.$theme
+    width: 100vw
+    height: 20vh
+    z-index: 200
+    flex-direction: column
+    padding: 1rem
+    justify-content: space-around
